@@ -1,19 +1,27 @@
 package br.com.chadschoperia.service;
 
 import br.com.chadschoperia.domain.entities.Product;
+import br.com.chadschoperia.domain.enums.HistoricProductActionEnum;
+import br.com.chadschoperia.domain.enums.SellingPointEnum;
 import br.com.chadschoperia.exceptions.EntityNotFoundException;
 import br.com.chadschoperia.repository.ProductRepository;
 import br.com.chadschoperia.service.dto.ProductDto;
 import br.com.chadschoperia.service.dto.ProductStockDto;
+import br.com.chadschoperia.service.events.AddHistoricProductEvent;
+import br.com.chadschoperia.service.events.AddListHistoricProductEvent;
+import br.com.chadschoperia.service.events.AddListRevenueExpenseEvent;
 import br.com.chadschoperia.service.mapper.ProductMapper;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
+import org.springframework.context.ApplicationEventPublisher;
+import org.springframework.context.MessageSource;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 
+import java.util.ArrayList;
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
+import java.util.Locale;
+import java.util.Objects;
 
 @Service
 @Transactional
@@ -23,6 +31,9 @@ public class ProductService {
 	private final ProductRepository repository;
 
 	private final ProductMapper mapper;
+
+	private final MessageSource historicMessageSource;
+	private final ApplicationEventPublisher applicationEventPublisher;
 
 	public List<ProductDto> findAllDto() {
 		return repository.findAllDto();
@@ -40,36 +51,62 @@ public class ProductService {
 
 	public ProductDto create(ProductDto dto) {
 		dto.setId(null);
-		return saveDto(dto);
+		dto = saveDto(dto);
+
+		publishHistoric(dto, HistoricProductActionEnum.CREATE);
+
+		return dto;
 	}
 
-	public List<ProductDto> restock(List<ProductStockDto> dtos) {
-		List<Product> products = repository.findAllById(dtos.stream().map(ProductStockDto::getProductId).collect(Collectors.toList()));
+	public List<ProductDto> restock(List<ProductStockDto> dtos, boolean positive) {
+		List<Long> productIds = dtos.stream().map(ProductStockDto::getProductId).toList();
+		List<Product> products = repository.findAllById(productIds);
+		List<Double> addedAmounts = new ArrayList<>();
+		List<Double> totalAmounts = new ArrayList<>();
+		List<Double> expensesValues = new ArrayList<>();
+		List<String> expensesDescs = new ArrayList<>();
 
-		products.forEach(product -> addStockFromSource(product, dtos));
+		products.forEach(product -> {
+			double added = addStockFromSource(product, dtos);
+			addedAmounts.add(added);
+			totalAmounts.add(product.getStock());
+			expensesValues.add(-product.getTotalPurchasePrice(added));
+			expensesDescs.add(historicMessageSource.getMessage("revenue.product.restock", new String[]{String.format("%01.1f", added), product.getName()}, Locale.getDefault()));
+		});
+		publishListHistoric(positive ? HistoricProductActionEnum.RESTOCK : HistoricProductActionEnum.UNSTOCK, productIds, addedAmounts, totalAmounts);
+		publishRevenueExpense(expensesValues, expensesDescs);
 
 		return mapper.toDto(saveEntity(products));
 	}
 
 	public ProductDto update(ProductDto dto) {
 		findDtoById(dto.getId());
-		return saveDto(dto);
+		dto = saveDto(dto);
+
+		publishHistoric(dto, HistoricProductActionEnum.UPDATE);
+
+		return dto;
 	}
 
 	public void deleteById(Long id) {
 		Product entity = findEntityById(id);
 		entity.setDeleted(Boolean.TRUE);
+		publishHistoric(entity, HistoricProductActionEnum.DELETE);
 		saveEntity(entity);
 	}
 
-	private void addStockFromSource(Product target, List<ProductStockDto> source) {
-		Optional<ProductStockDto> stockDto = source.stream().filter(dto -> dto.getProductId().equals(target.getId())).findAny();
-		if (stockDto.isEmpty()) {
-			throw new EntityNotFoundException(HttpStatus.BAD_REQUEST, "product.not_found.restock");
-		}
-		target.addStock(stockDto.get().getAmount());
+	private double addStockFromSource(Product target, List<ProductStockDto> source) {
+		ProductStockDto stockDto = source.stream()
+				.filter(dto -> Objects.equals(dto.getProductId(), target.getId()))
+				.findAny()
+				.orElseThrow(() -> new EntityNotFoundException(HttpStatus.BAD_REQUEST, "product.not_found.restock"));
+
+		double amount = stockDto.getAmount();
+		target.addStock(stockDto.getAmount());
+		return amount;
 	}
 
+	// <editor-fold defaultstate="collapsed" desc="Private Methods: Persist entity">
 	private ProductDto saveDto(ProductDto dto) {
 		return mapper.toDto(saveEntity(mapper.toEntity(dto)));
 	}
@@ -81,5 +118,37 @@ public class ProductService {
 	private List<Product> saveEntity(List<Product> products) {
 		return repository.saveAll(products);
 	}
+	// </editor-fold>
 
+	// <editor-fold defaultstate="collapsed" desc="Private Methods: Publish events">
+	private void publishRevenueExpense(List<Double> values, List<String> descriptions) {
+		applicationEventPublisher.publishEvent(new AddListRevenueExpenseEvent(values, descriptions, SellingPointEnum.KITCHEN_PRODUCT));
+	}
+
+	private void publishHistoric(ProductDto productDto, HistoricProductActionEnum action) {
+		this.publishHistoric(productDto, action, null);
+	}
+
+	private void publishHistoric(Product product, HistoricProductActionEnum action) {
+		this.publishHistoric(product, action, null);
+	}
+
+	private void publishHistoric(ProductDto productDto, HistoricProductActionEnum action, Double stock) {
+		applicationEventPublisher.publishEvent(new AddHistoricProductEvent(productDto.getId(), action, stock, productDto.getStock(), null));
+	}
+
+	private void publishHistoric(Product product, HistoricProductActionEnum action, Double stock) {
+		applicationEventPublisher.publishEvent(new AddHistoricProductEvent(product.getId(), action, stock, product.getStock(), null));
+	}
+
+	private void publishListHistoric(HistoricProductActionEnum action, List<Long> beerIds, List<Double> stocks, List<Double> totalStocks) {
+		List<String> descriptions = new ArrayList<>();
+
+		for (int i = 0; i < beerIds.size(); i++) {
+			descriptions.add(null);
+		}
+
+		applicationEventPublisher.publishEvent(new AddListHistoricProductEvent(action, beerIds, stocks, totalStocks, descriptions));
+	}
+	// </editor-fold>
 }
